# anima

./: .gitignore  .hgignore  CHANGELOG  CHANGELOG.rst  LICENSE  Makefile  README  README.md  VERSION  pyproject.toml  requirements-dev.txt  requirements.txt  run_maya_tests  setup.py
anima/: TestNodes.py  _New_controllers.py  _New_createNodes.txt  _New_drawNode.py  _New_joint.py  _New_limb.py  _New_nodes.py  _New_spineJoints.py  __init__.py  base.py  character.py  config.py  controllers.py  curve.py  drawNode.py  edit.py  exc.py  extension.py  extra_unuseful.py  joint.py  limb.py  limbJoint.py  network.py  nodes.py  perf.py  publish.py  recent.py  repr.py  representation.py  shapes.py  testing.py  texture.py  utilityFuncs.py
anima/animation/: __init__.py
anima/comp/: __init__.py
anima/dcc/: __init__.py  avid.py  base.py  external.py  testing.py
anima/env/: __init__.py  avid.py  base.py  blackmagic.py  external.py  fusion.py  houdini.py  max.py  maya.py  mayaEnv.py  motion_builder.py  nukeEnv.py  photoshop.py  resolve.py  testing.py
anima/extension/: __init__.py  maya.py
anima/mocap/: xsens.py
anima/pipeline/: __init__.py  recent.py  texture.py
anima/previs/: __init__.py  ui.py
anima/publish/: __init__.py
anima/render/: __init__.py  mat_converter.py  redshift.py
anima/rez_packages/: github_project_builder.py
anima/rig/: _New_controllers.py  _New_drawNode.py  _New_joint.py  _New_limb.py  _New_nodes.py  _New_spineJoints.py  character.py  controllers.py  curve.py  drawNode.py  extra_unuseful.py  joint.py  limb.py  limbJoint.py  network.py  nodes.py  shapes.py  utilityFuncs.py
anima/tests/: __init__.py
anima/ui/: __init__.py  base.py  create_shot_dialog.py  edl_importer.py  filename_template_dialog.py  image_format_dialog.py  lib.py  login_dialog.py  models.py  progress_dialog.py  project_dialog.py  project_manager.py  project_users_dialog.py  publish_checker.py  reference_editor.py  repository_dialog.py  review_dialog.py  structure_dialog.py  task_dialog.py  task_manager.py  task_picker_dialog.py  testing.py  time_log_dialog.py  time_tracker.py  uiCompiler.py  user_dialog.py  utils.py  version_creator.py  version_dialog.py  version_mover.py  version_updater.py
anima/utils/: __init__.py  archive.py  progress.py  report.py  task_hierarchy_io.py  task_template_parser.py
src/anima/: __init__.py  edit.py  exc.py  extension.py  publish.py  representation.py  texture.py
tests/: __init__.py  conftest.py  test_publishers.py  test_recent.py  test_repr.py  test_setup.py  test_utils.py
tests/arnold/: test_base85.py  test_speed.py
tests/dcc/: conftest.py  test_DCCBase.py  test_environment_variables.py  test_external.py  test_repo_vars.py
tests/env/: __init__.py  test_external.py  (+3 more)
(+793 files in other folders)
